tests/snapshots/run_wpt_conformance__trtx_reduceLogSumExp_float32_4D_tensor_options_axes_with_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float32 4D tensor options.axes with options.keepDimensions=true",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    reduceLogSumExpInput: f32[2, 2, 2, 3];\n  }\n\n  nodes {\n    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=[1, 3], keepDimensions=true, label=\"\");\n  }\n\n  outputs { reduceLogSumExpOutput; }\n}\n",
        ),
    },
)
