tests/snapshots/run_wpt_conformance__trtx_reduceLogSumExp_float32_4D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float32 4D tensor options.keepDimensions=false",
    "trtx",
    "PASS",
)
